<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="406dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="109dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="112dp"
            android:text="@string/subtitle"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radio_tlv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tel_aviv_cinema" />

        <RadioButton
            android:id="@+id/radio_herzelia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/herzelia_cinema" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:text="@string/prompt_2"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/indianajonesimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/movie_clipart"
        android:layout_width="85dp"
        android:layout_height="102dp"
        android:src="@drawable/ic_outline"
        app:layout_constraintBottom_toTopOf="@+id/indianajonesimage"
        app:layout_constraintEnd_toStartOf="@+id/number_picker"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/indianajonesimage"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:src="@drawable/indianajones1"
        app:layout_constraintBottom_toTopOf="@+id/showTicketBtn" />

    <Button
        android:id="@+id/showTicketBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>